[gd_scene load_steps=8 format=3 uid="uid://d0mqyveglwwyn"]

[ext_resource type="Script" path="res://src/Room.gd" id="1_ikf3l"]
[ext_resource type="Texture2D" uid="uid://bbaub2iwio7a4" path="res://assets/test-room-1.bmp" id="2_ayp85"]
[ext_resource type="PackedScene" uid="uid://le2tdlm8njnf" path="res://src/Door.tscn" id="3_pptsr"]
[ext_resource type="PackedScene" uid="uid://chjam1dcabmk5" path="res://src/PlayerCharacter.tscn" id="4_qmgak"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_sic8f"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_lylfe"]
normal = Vector2(-1, 0)

[sub_resource type="LabelSettings" id="LabelSettings_b7kxq"]
font_size = 32
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="TestRoom" type="Node2D"]
script = ExtResource("1_ikf3l")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0, 360)
scale = Vector2(1.22, 1.22)
texture = ExtResource("2_ayp85")

[node name="LetBorder" type="StaticBody2D" parent="Background"]
position = Vector2(-500, 163.934)
scale = Vector2(0.819672, 0.819672)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/LetBorder"]
shape = SubResource("WorldBoundaryShape2D_sic8f")

[node name="RightBorder" type="StaticBody2D" parent="Background"]
position = Vector2(500, 163.934)
scale = Vector2(0.819672, 0.819672)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Background/RightBorder"]
shape = SubResource("WorldBoundaryShape2D_lylfe")

[node name="Doors" type="Node2D" parent="."]

[node name="Door" parent="Doors" instance=ExtResource("3_pptsr")]
position = Vector2(363, 431)
room_name = "To Inside"

[node name="PlayerCharacter" parent="." instance=ExtResource("4_qmgak")]
position = Vector2(152, 549)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 560)
offset = Vector2(0, -200)

[node name="CameraLabel" type="Label" parent="Camera2D"]
offset_left = -75.0
offset_top = -460.0
offset_right = 75.0
offset_bottom = -410.0
label_settings = SubResource("LabelSettings_b7kxq")
horizontal_alignment = 1

[connection signal="player_moves" from="PlayerCharacter" to="." method="_on_player_character_player_moves"]
